criando classe de pagamento